Updated repo meta

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "description": "🌊 Deep oceanic blue Hyper theme",
   "license": "MIT",
-  "repository": "klauscfhq/hyperocean",
+  "repository": "klaussinani/hyperocean",
   "author": {
     "name": "Klaus Sinani",
-    "email": "klauscfhq@protonmail.com",
-    "url": "https://klauscfhq.github.io"
+    "email": "klaussinani@gmail.com",
+    "url": "https://klaussinani.github.io"
   },
   "maintainers": [
     {
