Minor update on package description

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hyperocean",
   "version": "1.1.2",
   "main": "index.js",
-  "description": "🌊 Deep oceanic blue Hyper theme",
+  "description": "Deep oceanic blue Hyper theme",
   "license": "MIT",
   "repository": "klaussinani/hyperocean",
   "author": {
